[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Formule_Dialog.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Comptence_dialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Button_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/Text_font.tres" type="DynamicFont" id=4]

[node name="Formule_Dialog" type="AcceptDialog"]
visible = true
anchor_right = 1.0
margin_left = 16.0
margin_right = -16.0
margin_bottom = 312.0
rect_min_size = Vector2( 500, 0 )
popup_exclusive = true
window_title = "Alerte !"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 528.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Cout" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 173.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Cout:"
align = 1
valign = 1

[node name="Portee" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 177.0
margin_right = 350.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Portée:"
align = 1
valign = 1

[node name="Cible" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 354.0
margin_right = 528.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Cible:"
align = 1
valign = 1

[node name="titre_desc" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 528.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 3 )
text = "Description :"

[node name="Description" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 528.0
margin_bottom = 102.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
fit_content_height = true

[node name="amelio_desc" type="Label" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 528.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 3 )
text = "Amélioration :"

[node name="Amélioration" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 528.0
margin_bottom = 172.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
fit_content_height = true

[node name="Competence" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 276.0
[connection signal="meta_clicked" from="VBoxContainer/Description" to="." method="_on_Description_meta_clicked"]
[connection signal="meta_clicked" from="VBoxContainer/Amélioration" to="." method="_on_Amlioration_meta_clicked"]
